[project]
name = "px-kvstore"
version = "0.1.0"
description = "A sharded in-memory LRU key-value store with HTTP API, TTL, and extensible architecture."
authors = [
    { name = "Tony Chen" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

